<resources>
    <string name="app_name">orbitcare</string>
    <string name="signin_button_title">Anmelden</string>
    <string name="employee_signup_button_title">Mitarbeiter Registrieren</string>
    <string name="organisation_signup_button_title">Organisation Registrieren</string>
    <string name="organisation_id_hint_text">Organisation-ID</string>
    <string name="org_name_text">Organisation-Name</string>
    <string name="street_text">Straße</string>
    <string name="housenumber_text">Hausnummer</string>
    <string name="plz_text">PLZ</string>
    <string name="city_text">Ort</string>

    <string name="addClient">Neuen Klienten hinzufügen</string>
    <string name="saveButton">Speichern</string>
    <string name="cancelButton">Abbruch</string>
    <string name="clientsLabel">Klienten</string>
    <string name="clientDetails">Klient Details</string>
    <string name="closeButton">Schließen</string>
    <string name="incorrectSignInHint">Falsche Email oder Passwort!</string>
    <string name="unknownOrgId">Unbekannte Organisation Id.</string>
    <string name="pwdNotMatch">Passwörter stimmen nicht überein.</string>
    <string name="notAllFieldsFilled">Alle Felder ausfüllen und gültige E-Mail angeben!</string>
    <string name="orgIdAlreadyInUse">OrganisationID bereits vergeben.</string>
    <string name="employeeLabel">Mitarbeiter</string>
    <string name="employeeDetails">Mitarbeiter Details</string>

    <string name="welcomeText">Hallo %1$s.</string>
    <string name="welcomeDialog">WILLKOMMEN bei ORBITCARE</string>

    <string name="employeeSignText">Erfolgreich!</string>
    <string name="employeeDialog">Sie wurden registriert.</string>

    <string name="orgSignText">Erfolgreich!</string>
    <string name="orgDialog">Ihre Organisation wurde registriert.</string>

    <string name="firstname_text">Vorname</string>
    <string name="lastname_text">Nachname</string>
    <string name="phone_text">Telefonnummer</string>
    <string name="email_text">E-Mail</string>
    <string name="password_text">Passwort</string>
    <string name="confirm_password_text">Passwort bestätigen</string>
    <string name="organisation_button_title">Registrieren</string>
    <string name="warning_text_sign_up">Notieren Sie sich die Organisation-ID. Diese wird für die Registrierung der Mitarbeiter benötigt.</string>
    <string name="selected_date">Ausgewähltes Datum: %1$s</string>
    <string name="monthview">Monatsansicht</string>
    <string name="weekview">Wochenansicht</string>
    <string name="dayview">Tagesansicht</string>
    <string name="calendarview">Kalenderansicht</string>
    <string name="confirm">Bestätigen</string>
    <string name="cancel">Abbrechen</string>
    <string name="feedback">Feedbackrunde</string>
    <string name="weekplanning">Wochenplanung</string>
    <string name="officetime">Bürozeit</string>
    <string name="housevisit">Hausbesuch</string>
    <string name="doctorvisit">Arztbesuch</string>
    <string name="blue">Blau</string>
    <string name="green">Grün</string>
    <string name="orange">Orange</string>
    <string name="purple">Lila</string>
    <string name="red">Rot</string>
    <string name="new_event">Neues Event</string>
    <string name="add">Hinzufügen</string>
    <string name="event_edit">Event bearbeiten</string>
    <string name="refresh">Aktualisieren</string>
    <string name="delete">Löschen</string>
    <string name="delete_event">Event löschen</string>
    <string name="delete_event_confirmation">Möchten Sie das Event \'%1$s\' wirklich löschen?</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Di</string>
    <string name="wednesday">Mi</string>
    <string name="thursday">Do</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">So</string>
</resources>