<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.SignUpEmployeeActivity">

    <ImageView
    android:id="@+id/logoImageView"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginStart="70dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="70dp"
    android:contentDescription="@null"
    android:src="@mipmap/ic_orbitcare_logo_round"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/organisationIDEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:autofillHints="@null"
        android:hint="@string/organisation_id_hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/firstname_text"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organisationIDEditText" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/lastname_text"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="phone"
        android:hint="@string/phone_text"
        android:autofillHints="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

    <EditText
        android:id="@+id/mailEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_text"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:hint="@string/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailEditText" />

    <EditText
        android:id="@+id/passwordConfirmationEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:hint="@string/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/idError"
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/errorRed"
        android:text="@string/unknownOrgId"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationEditText"/>

    <TextView
        android:id="@+id/pwdError"
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/errorRed"
        android:text="@string/pwdNotMatch"
        app:layout_constraintTop_toBottomOf="@+id/idError"/>

    <TextView
        android:id="@+id/editTextFilledError"
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/errorRed"
        android:text="@string/notAllFieldsFilled"
        app:layout_constraintTop_toBottomOf="@+id/pwdError"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:text="@string/organisation_button_title"
        android:background="@color/orbitBlue"
        android:onClick="signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFilledError" />

    <Button
        android:id="@+id/organisationSignUpButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/organisation_signup_button_title"
        android:onClick="organisationSignUpButton"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signin_button_title"
        android:onClick="signInButton"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organisationSignUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>