<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.SignUpOrganisationActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:src="@mipmap/ic_orbitcare_logo_round"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/warning_text_sign_up"
        android:textColor="#CA1212"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/organisationIDEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/organisation_id_hint_text"
        android:autofillHints="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintTextView" />

    <EditText
        android:id="@+id/organisationNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/org_name_text"
        android:autofillHints="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organisationIDEditText" />

    <EditText
        android:id="@+id/streetEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/street_text"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organisationNameEditText" />

    <EditText
        android:id="@+id/housenumberEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/housenumber_text"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streetEditText" />

    <EditText
        android:id="@+id/plzEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/plz_text"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/housenumberEditText" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/city_text"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plzEditText" />

    <TextView
        android:id="@+id/errorContainer"
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/errorRed"
        android:text="Bitte alle Felder ausfüllen!"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText"/>

    <TextView
        android:id="@+id/idError"
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/errorRed"
        android:text="OrganisationID bereits vergeben."
        app:layout_constraintTop_toBottomOf="@+id/errorContainer"/>

    <Button
        android:id="@+id/organisationSignUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:text="@string/organisation_signup_button_title"
        android:onClick="organisationSignUpButton"
        android:background="@color/orbitBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idError" />

    <Button
        android:id="@+id/employeeSignUpButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:onClick="employeeSignUpButton"
        android:text="@string/employee_signup_button_title"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organisationSignUpButton" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signin_button_title"
        android:onClick="signInButton"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employeeSignUpButton" />


</androidx.constraintlayout.widget.ConstraintLayout>