<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.login.SignInActivity">

    <ImageView
    android:id="@+id/logoImageView"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginStart="70dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="70dp"
    android:src="@mipmap/ic_orbitcare_logo_round"
    android:contentDescription="@null"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_text"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:ems="16"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:hint="@string/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:text="@string/signin_button_title"
        android:background="@color/orbitBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/orgSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/organisation_signup_button_title"
        android:onClick="organisationSignUpButton"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <Button
        android:id="@+id/employeeSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/employee_signup_button_title"
        android:onClick="employeeSignUpButton"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orgSignUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>